# learningReact-footyquiz

./: steps.txt  structure.txt
backend/: pyproject.toml  server.py
backend/src/: app.py  utils.py
backend/src/database/: db.py  models.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
test/: hrello.txt
