[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-sdk-python>=0.1.0",
    "fastapi>=0.115.12",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
    "sql>=2022.4.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
